examples/compiler_errors/header_counts/ErrorNoteMain.flx
import ErrorNoteBroken

fn main() -> Unit {
    let _x = ErrorNoteBroken.one()
    let value: Int = "oops"
    print("hi")
}
